// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders a tab component 1`] = `
<li
  onClick={[Function]}
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  label
</li>
`;

exports[`Tabs renders a tabs component 1`] = `
<div>
  <ol
    style={
      Object {
        "background": "hsl(167, 90%, 38%)",
      }
    }
  >
    <li
      onClick={[Function]}
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      tab1
    </li>
    <li
      onClick={[Function]}
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      tab2
    </li>
  </ol>
  <div>
    <div>
      Tab 1
    </div>
  </div>
</div>
`;
